force-app/main/default/objects/KimbleOne__RevenueAllocationRate__c/KimbleOne__RevenueAllocationRate__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Revenue Allocation Rate</label>
    <nameField>
        <label>Revenue Allocation Rate</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Allocation Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>