force-app/main/default/objects/KimbleOne__RevenueAllocationRate__c/fields/KimbleOne__AllocationFactor__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllocationFactor__c</fullName>
    <label>Allocation Factor</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>