force-app/main/default/objects/KimbleOne__RevenueAllocationRate__c/fields/KimbleOne__AnalysisFact__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AnalysisFact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Analysis Fact</label>
    <referenceTo>KimbleOne__AnalysisFact__c</referenceTo>
    <relationshipLabel>Revenue Allocation Rates</relationshipLabel>
    <relationshipName>RevenueAllocationRates</relationshipName>
    <type>Lookup</type>
</CustomField>