force-app/main/default/objects/KimbleOne__RevenueAllocationRate__c/fields/KimbleOne__ProductDomain__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ProductDomain__c</fullName>
    <label>Product Domain</label>
    <referenceTo>KimbleOne__ProductDomain__c</referenceTo>
    <relationshipName>RevenueAllocationShares</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>