force-app/main/default/objects/KimbleOne__RevenueAllocationRate__c/fields/KimbleOne__RevenueAllocationModel__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RevenueAllocationModel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Revenue Allocation Model</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>RevenueAllocationModel</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Revenue Allocation Rates</relationshipLabel>
    <relationshipName>RevenueAllocationRates</relationshipName>
    <type>Lookup</type>
</CustomField>